# aoc2022

./: Makefile  debug.hs  demo.aoc
compiler/: CMakeLists.txt  checker.cpp  checker.hpp  compiler.cpp  core.cpp  core.hpp  debug_output.cpp  debug_output.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  syntax.hpp  token.hpp  variant.hpp
puzzles/day06/: joe.output
puzzles/day07/: joe.output
puzzles/day08/: joe.output
puzzles/day10/: joe.output
puzzles/day11/: joe.output
puzzles/day13/: joe.output
puzzles/day15/: joe.output
puzzles/day17/: joe.output
puzzles/day18/: joe.output
puzzles/day20/: joe.output
puzzles/day21/: joe.output
src/: day01.aoc  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.aoc  day07.aoc  day08.aoc  day09.aoc  day10.aoc  day11.aoc  day12.aoc  day13.aoc  day15.aoc  day16.aoc  day17.aoc  day18.aoc  day19.aoc  day20.aoc  day21.aoc  day22.aoc  fetch.sh
